<resources>
    <string name="app_name">Vhire</string>

    <string name="api_key">61d7193e52d6er4AuKwW0MjIU61d7193e52d6eYAqnHTf7</string>

    <string name="splashNote">Eat organic for your well-being be</string>

    <string name="yourname">Your name</string>
    <string name="email">Email</string>
    <string name="emailAddress">Email Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="enterphoneNumber">Enter Phone number</string>
    <string name="password">Password</string>
    <string name="enterpassword">Enter password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="entercpassword">Enter Confirm password</string>
    <string name="enteremailaddress">Enter email address</string>
    <string name="enteryourname">Enter your name</string>
    <string name="yourName">Your name</string>
    <string name="enterfullName">Enter your full name</string>
    <string name="createAccount">Create Account</string>
    <string name="createAccountNote">Enter your personal information</string>
    <string name="signup">Sign Up</string>
    <string name="signupNote">To get more advantages sign up your accounts by filling in some informations</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="signinNote">Enter your email address and password to continue the shopping</string>
    <string name="forgot">Forgot password</string>
    <string name="forgotNote">Enter your email address to recover your password</string>
    <string name="otpVerification">OTP verification</string>
    <string name="otp">OTP</string>
    <string name="resend">Resend</string>
    <string name="otpNote">An OTP has been sent to your email</string>
    <string name="submit">Submit</string>
    <string name="createpassword">Create password</string>
    <string name="createnewpasswordNote">Create your new password</string>
    <string name="newpassword">New password</string>
    <string name="enternewpassword">Enter new password</string>
    <string name="donthaveanaccount">Don\'t have an account?</string>
    <string name="alreadyhaveanaccount">Already have an account?</string>
    <string name="search">Search</string>
    <string name="searchyourProducts">Search your products</string>
    <string name="location">Location</string>
    <string name="locationnote">Tanuku, Andhra Pradesh, India</string>
    <string name="categories">Categories</string>
    <string name="actuleprice">₹0</string>
    <string name="offerprice">₹0</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="faq">Faq</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="viewMore">See all</string>
    <string name="instock">In Stock</string>
    <string name="outofstock">Out of Stock</string>
    <string name="Backto">Back to</string>
    <string name="iAgreeWith">I Agree With</string>

    <string name="tab_all">All</string>
    <string name="tab_upcoming">Upcomings</string>
    <string name="tab_complete">Completed</string>

    <!--    address-->
    <string name="mobilenumber">Mobile Number</string>
    <string name="entermobilenumber">10-dits mobile number without prefixes</string>
    <string name="alternatemobilenumber">Alternate Mobile Number</string>
    <string name="enteralternatemobilenumber">10-dits mobile number without prefixes</string>
    <string name="flataddress">Flat, House no, Building, Company, Apartment</string>
    <string name="enterflataddress">Enter Flat, House no, Building, Company, Apartment</string>
    <string name="areaaddress">Area, Street, Sector, Landmark</string>
    <string name="enterareaaddress">Enter Area, Street, Sector, Landmark</string>
    <string name="landmark">Landmark</string>
    <string name="enterlandmark">Enetr Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="enterpincode">6-digit Pincode</string>
    <string name="city">Town/City</string>
    <string name="addaddress">Add address</string>
    <string name="editaddress">Edit address</string>
    <string name="editProfile">Edit Profile</string>
    <string name="myorders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="update">Update</string>

    <!--    menu-->
    <string name="general">General</string>
    <string name="profile">Profile</string>
    <string name="myaddress">My Address</string>
    <string name="language">Language</string>
    <string name="promotionalactivity">Promotional Activity</string>
    <string name="coupon">Coupon</string>
    <string name="mywallet">My Wallet</string>
    <string name="earnings">Earnings</string>
    <string name="refeandearn">Refer &amp; Earn</string>
    <string name="helpandsupport">Help &amp; Support</string>
    <string name="about">about</string>
    <string name="share">Share</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="refundPolicy">Refund Policy</string>
    <string name="shippingPolicy">Shipping Policy</string>
    <string name="logout">Logout</string>
    <string name="logout_note">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="checkout">CheckOut</string>
    <string name="proceedtocheckout">Proceed to CheckOut</string>
    <string name="placeorder">Place Order</string>
    <string name="addtocart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="totalAmount">Total Amount</string>
    <string name="Items">Items</string>
    <string name="discount">Discount</string>
    <string name="deliveryCharges">Delivery Charges</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="noData">No Data</string>
    <string name="title">Title</string>
    <string name="orderSuccessfull">Order Successfull</string>
    <string name="orderNote">Your order #96454 is successfully placed</string>
    <string name="trackMyOrder">Track My Order</string>
    <string name="goBack">Go Back</string>
    <string name="orderFailed">Order Failed</string>
    <string name="orderFailedNote">You can place the order again or contact support if the issue persists.</string>
    <string name="tryAgain">Try Again</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Delete Confirmation</string>
    <string name="deleteConfirmationNote">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chooseyourlanguage">Choose Your Language</string>
    <string name="chooseyourlanguagetoproceed">Choose your language to proceed</string>
    <string name="english">English</string>
    <string name="telugu">Telugu</string>
    <string name="enterpromocode">Enter Promo Code</string>
    <string name="apply">Apply</string>

    <string name="dummyNote">Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
     </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>