<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseyourlanguage"
            android:fontFamily="@font/teachers_semibold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chooseyourlanguagetoproceed"
        android:fontFamily="@font/teachers_regular"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"/>


    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radioTelugu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telugu" />
    </RadioGroup>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:textAllCaps="false"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/update" />

</LinearLayout>
