<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Logins.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="22sp"
                android:textColor="@color/darkGray"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/createAccount"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="22sp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/yourName"
                android:textColor="@color/txtLight"
                android:fontFamily="@font/teachers_medium"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user"
                    app:tint="@color/darkGray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="@string/enterfullName"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="phone"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/emailAddress"
                android:textColor="@color/txtLight"
                android:fontFamily="@font/teachers_medium"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/mail"
                    app:tint="@color/darkGray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="@string/enteremailaddress"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phoneNumber"
                android:textColor="@color/txtLight"
                android:fontFamily="@font/teachers_medium"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/phone"
                    app:tint="@color/darkGray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mobileEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:hint="@string/entermobilenumber"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/txtLight"
                android:fontFamily="@font/teachers_medium"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/password_ic"
                    app:tint="@color/darkGray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:hint="@string/enterpassword"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iAgreeWith"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/termsandconditions"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:fontFamily="@font/teachers_medium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSubmit"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/signup"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="@font/teachers_bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/loginLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/alreadyhaveanaccount"
                    android:fontFamily="@font/teachers_semibold"
                    android:textColor="@color/text"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/teachers_bold"
                    android:text="@string/signin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </ScrollView>

</layout>