<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logout_lotti"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:fontFamily="@font/teachers_semibold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/logout_note"
        android:fontFamily="@font/teachers_regular"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/round_button_light_gray"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOk"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
