<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    android:outlineSpotShadowColor="@color/colorPrimary"
    app:strokeWidth="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="30dp"
            android:layout_height="30dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/teachers_semibold"
                    android:text="@string/title"
                    android:textColor="@color/txtHeader"
                    android:textSize="15sp"
                    android:singleLine="true"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgEdit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/edit_ic"
                    app:tint="@color/txtH"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/teachers_medium"
                android:text="@string/address"
                android:textColor="@color/txtH"
                android:textSize="14sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/teachers_medium"
                android:text="@string/pincode"
                android:textColor="@color/txtH"
                android:textSize="14sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/teachers_medium"
                android:text="@string/mobilenumber"
                android:textColor="@color/txtH"
                android:textSize="14sp" />

        </LinearLayout>



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>